{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 389,
  "lineage": "089cbf5a-580f-ee10-d357-ee2aceae7708",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bar",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0524dc532692772c5",
            "associate_with_private_ip": "10.0.0.12",
            "domain": "vpc",
            "id": "eipalloc-0524dc532692772c5",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-52-28-98-2.eu-central-1.compute.amazonaws.com",
            "public_ip": "52.28.98.2",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my elastic IP",
              "Owner": "Yaroslav",
              "Project": "Pilot project"
            },
            "tags_all": {
              "Name": "my elastic IP",
              "Owner": "Yaroslav",
              "Project": "Pilot project"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:693307425193:internet-gateway/igw-061e97da28b4c4353",
            "id": "igw-061e97da28b4c4353",
            "owner_id": "693307425193",
            "tags": {
              "Name": "My_internet_gateway",
              "Owner": "Yaroslav",
              "Project": "Pilot project"
            },
            "tags_all": {
              "Name": "My_internet_gateway",
              "Owner": "Yaroslav",
              "Project": "Pilot project"
            },
            "vpc_id": "vpc-0f142dcddb6edc979"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0524dc532692772c5",
            "connectivity_type": "public",
            "id": "nat-0d0c6754a4ffa18c0",
            "network_interface_id": "eni-0ef7fdb0af242e1ec",
            "private_ip": "10.0.3.112",
            "public_ip": "52.28.98.2",
            "subnet_id": "subnet-039393e6c6808d37f",
            "tags": {
              "Name": "my_NAT_gateway",
              "Owner": "Yaroslav",
              "Project": "Pilot project"
            },
            "tags_all": {
              "Name": "my_NAT_gateway",
              "Owner": "Yaroslav",
              "Project": "Pilot project"
            }
          },
          "dependencies": [
            "aws_eip.bar",
            "aws_internet_gateway.main",
            "aws_subnet.private_az1",
            "aws_vpc.vpc1",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "DB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:693307425193:security-group/sg-0e85f5934489650d9",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0e85f5934489650d9",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Security Group for DB",
            "name_prefix": "",
            "owner_id": "693307425193",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "12345",
              "Name": "SecurityGroup for EFS",
              "Owner": "Yaroslav",
              "Project": "Pilot project",
              "base": "SecurityGroup"
            },
            "tags_all": {
              "CostCenter": "12345",
              "Name": "SecurityGroup for EFS",
              "Owner": "Yaroslav",
              "Project": "Pilot project",
              "base": "SecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f142dcddb6edc979"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "NFS_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:693307425193:security-group/sg-0fbf12610197c7aaa",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0fbf12610197c7aaa",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "Security Group for EFS",
            "name_prefix": "",
            "owner_id": "693307425193",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "12345",
              "Name": "SecurityGroup for EFS",
              "Owner": "Yaroslav",
              "Project": "Pilot project",
              "base": "SecurityGroup"
            },
            "tags_all": {
              "CostCenter": "12345",
              "Name": "SecurityGroup for EFS",
              "Owner": "Yaroslav",
              "Project": "Pilot project",
              "base": "SecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f142dcddb6edc979"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:693307425193:security-group/sg-0259badc6e9186965",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0259badc6e9186965",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Base Security Group",
            "name_prefix": "",
            "owner_id": "693307425193",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "12345",
              "Name": "SecurityGroup for general",
              "Owner": "Yaroslav",
              "Project": "Pilot project",
              "base": "SecurityGroup"
            },
            "tags_all": {
              "CostCenter": "12345",
              "Name": "SecurityGroup for general",
              "Owner": "Yaroslav",
              "Project": "Pilot project",
              "base": "SecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f142dcddb6edc979"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc1"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:693307425193:subnet/subnet-039393e6c6808d37f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039393e6c6808d37f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "693307425193",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private subnet in az1",
              "Owner": "Yaroslav",
              "Project": "Pilot project"
            },
            "tags_all": {
              "Name": "private subnet in az1",
              "Owner": "Yaroslav",
              "Project": "Pilot project"
            },
            "vpc_id": "vpc-0f142dcddb6edc979"
          },
          "dependencies": [
            "aws_vpc.vpc1",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:693307425193:subnet/subnet-0b9c359642a282079",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b9c359642a282079",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "693307425193",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private subnet in az2",
              "Owner": "Yaroslav",
              "Project": "Pilot project"
            },
            "tags_all": {
              "Name": "private subnet in az2",
              "Owner": "Yaroslav",
              "Project": "Pilot project"
            },
            "vpc_id": "vpc-0f142dcddb6edc979"
          },
          "dependencies": [
            "aws_vpc.vpc1",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "deposed": "ad510d48",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:693307425193:subnet/subnet-0dc5a4dea1eef2a3b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc5a4dea1eef2a3b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "693307425193",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private subnet in az2",
              "Owner": "Yaroslav",
              "Project": "Pilot project"
            },
            "tags_all": {
              "Name": "private subnet in az2",
              "Owner": "Yaroslav",
              "Project": "Pilot project"
            },
            "vpc_id": "vpc-0f142dcddb6edc979"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.vpc1",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:693307425193:subnet/subnet-0b16c0ba660184414",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b16c0ba660184414",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "693307425193",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public subnet in az1",
              "Owner": "Yaroslav",
              "Project": "Pilot project"
            },
            "tags_all": {
              "Name": "public subnet in az1",
              "Owner": "Yaroslav",
              "Project": "Pilot project"
            },
            "vpc_id": "vpc-0f142dcddb6edc979"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.vpc1",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:693307425193:subnet/subnet-0615cae85cac0686f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0615cae85cac0686f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "693307425193",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public subnet in az2",
              "Owner": "Yaroslav",
              "Project": "Pilot project"
            },
            "tags_all": {
              "Name": "public subnet in az2",
              "Owner": "Yaroslav",
              "Project": "Pilot project"
            },
            "vpc_id": "vpc-0f142dcddb6edc979"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.vpc1",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:693307425193:vpc/vpc-0f142dcddb6edc979",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0457e660e4f37674e",
            "default_route_table_id": "rtb-06ec857d52b41d21e",
            "default_security_group_id": "sg-0501569ef0bb0a2fb",
            "dhcp_options_id": "dopt-0f5c318eeb21b5fe3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f142dcddb6edc979",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06ec857d52b41d21e",
            "owner_id": "693307425193",
            "tags": {
              "Name": "VPC_1",
              "Owner": "Yaroslav",
              "Project": "Pilot project"
            },
            "tags_all": {
              "Name": "VPC_1",
              "Owner": "Yaroslav",
              "Project": "Pilot project"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}